displaying error message

--- a/crypto-tracker/qml.qrc
+++ b/crypto-tracker/qml.qrc
@@ -6,9 +6,12 @@
         <file>Components/CryptoLabel/CutCornersRectangleWithBorder.qml</file>
         <file>CoinsView.qml</file>
         <file>CoinsViewForm.ui.qml</file>
-        <file>Components/Sidebar/Sidebar.qml</file>
+        <file>Components/Sidebar/SortControl.qml</file>
         <file>CustomColors/Colors.qml</file>
         <file>CustomColors/qmldir</file>
+        <file>Components/Sidebar/SortControlForm.ui.qml</file>
+        <file>MainView.qml</file>
+        <file>Components/Sidebar/Sidebar.qml</file>
         <file>Components/Sidebar/SidebarForm.ui.qml</file>
     </qresource>
 </RCC>
