--- a/crypto-tracker/qml.qrc
+++ b/crypto-tracker/qml.qrc
@@ -13,5 +13,8 @@
         <file>MainView.qml</file>
         <file>Components/Sidebar/Sidebar.qml</file>
         <file>Components/Sidebar/SidebarForm.ui.qml</file>
+        <file>resources/images/red-x-line-icon.svg</file>
+        <file>resources/images/wait-loader-icon.svg</file>
+        <file>Components/Sidebar/StaleDataIndicator.qml</file>
     </qresource>
 </RCC>
